# PsPixel

./: .gitignore  LICENSE.txt  README.md  dev.sh
.github/workflows/: build-release.yml
desktop/: CMakeLists.txt  app.rc.in  build.ps1  installer.nsi
desktop/include/: constants.h  mainwindow.h  pixelcanvas.h  version.h.in
desktop/src/: main.cpp  mainwindow.cpp  pixelcanvas.cpp
desktop/src/export/: gifencoder.cpp  gifencoder.h  spritesheetexporter.cpp  spritesheetexporter.h
desktop/src/fileformat/: pspxformat.cpp  pspxformat.h
desktop/src/ui/animation/: animationcontroller.cpp  animationcontroller.h  animationpalette.cpp  animationpalette.h
desktop/src/ui/bottom/: zoombar.cpp  zoombar.h
desktop/src/ui/history/: historymanager.cpp  historymanager.h  historypalette.cpp  historypalette.h
desktop/src/ui/layers/: layer.h  layermanager.cpp  layermanager.h  layerpalette.cpp  layerpalette.h
desktop/src/ui/start/: startscreen.cpp  startscreen.h
desktop/src/ui/tools/: basetool.cpp  basetool.h  brushtool.cpp  brushtool.h  circletool.cpp  circletool.h  erasertool.cpp  erasertool.h  eyedroppertool.cpp  eyedroppertool.h  lassotool.cpp  lassotool.h  linetool.cpp  linetool.h  magicwandtool.cpp  magicwandtool.h  paintbuckettool.cpp  paintbuckettool.h  rectangletool.cpp  rectangletool.h  selecttool.cpp  selecttool.h  toolmanager.cpp  toolmanager.h  toolpalette.cpp  toolpalette.h
desktop/src/ui/top/: autoupdater.cpp  autoupdater.h  keybindsdialog.cpp  keybindsdialog.h  newprojectdialog.cpp  newprojectdialog.h  saveexportdialog.cpp  saveexportdialog.h
mcp/: package-lock.json  package.json  tsconfig.json
mcp/src/: canvas.ts  index.ts
